tests/fn_overloading.jin
fn extern printf(fmt: *u8, ..) -> i32

fn main {
	add(int(1), int(1)) // exact int
	//add(1, 1) // untyped int matching
	add(f32(1.0), f32(2.5)) // exact f32
	//add(1.0, 2.5) // untyped float matching
	//add(1, 3.0) // error
}

fn add(a: int, b: int) {
	printf("add ints: %d\n".ptr, a + b)
}

//fn add(a: u64, b: u64) {
//	printf("add u64s: %u\n".ptr, a + b)
//}

fn add(a: f32, b: f32) {
	printf("add floats: %f\n".ptr, a + b)
}
